Fixed some broken CSS with left alignment. Could  be further improved by FE when the time is right for that. ASANA TASK: https://app.asana.com/0/529531421086025/1201044996333429/f

--- a/includes/css/easy-image-gallery-admin.css
+++ b/includes/css/easy-image-gallery-admin.css
@@ -133,7 +133,5 @@
 }
 
 .info {
-  width: 20%;
   vertical-align: top;
-  float:right
 }
